<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnOrderLight"
    tools:context=".VerifyPhoneActivity">

    <TextView
        android:id="@+id/textViewPNRNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/pnr_number"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPNR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPNR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/enter_pnr_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/btnStaffDarker"
        app:layout_constraintBottom_toTopOf="@+id/textViewMobileNumber"
        app:layout_constraintEnd_toEndOf="@+id/textViewMobileNumber"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textViewMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/mobile_number"
        android:textColor="#ffff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/enter_mobile_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/btnStaffDarker"
        app:layout_constraintEnd_toEndOf="@+id/textViewMobileNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewMobileNumber"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonSendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#124"
        android:text="@string/send_otp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</android.support.constraint.ConstraintLayout>